<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.home.HomeView">

    <View
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:background="@drawable/bg_bright"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:background="@drawable/ic_line_2"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/line2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/line2"
        android:layout_width="220dp"
        android:layout_height="2dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_line_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_event"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_line_2"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="40dp"
        android:text="@string/hallo"
        style="@style/TextView.Medium24spGrey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:text="@string/name"
        style="@style/TextView.Medium24spOrange"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_event"
        android:layout_marginTop="200dp"
        style="@style/Button.Choose"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_guest"
        android:layout_marginTop="20dp"
        style="@style/Button.Choose"
        app:layout_constraintTop_toBottomOf="@id/btn_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="244dp"
        android:layout_height="160dp"
        android:layout_marginBottom="56dp"
        android:src="@drawable/img_suitmedia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/img_bottom"/>

    <ImageView
        android:id="@+id/img_bottom"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:src="@drawable/img_bg_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>